hphp/hack/test/typecheck/new_inference/typehole/t27505467.php.exp
File "t27505467.php", line 15, characters 7-9:
No method 'foo' in D (Typing[4053])
File "t27505467.php", line 12, characters 43-43:
This is why I think it is an object of type D
File "t27505467.php", line 7, characters 7-7:
Declaration of D is here
